# lvgl

./: CMakeLists.txt  sources.cmake
src/: lv_conf_internal.h
